--- a/tex/report/report.tex
+++ b/tex/report/report.tex
@@ -432,6 +432,93 @@ implementations and handling of shared and non-shared GPU memory as well as
 thread synchronization proved to be too much to tackle for this project given
 our time constraint. However, moving forward these are great areas to explore.
 
+\section{Implementation}
+%As seen in the preceding table and figure, 
+In our experimental results,
+the CPU implementation outperformed
+the GPU implementations across the board. While this was not expected, the
+results are very interesting from an implementation point of view. There are a
+few key areas that hurt the GPU implementation -- unforutnately we did not have
+enough time to fix/implement these properly.
+\begin{itemize}
+	\item Memory allocation
+	\item Device-host communication
+	\item Optimized kernel implementations
+\end{itemize}
+
+\subsection{Memory Allocation}
+This was the first issue we ran into during our work on the sequential GPU
+algorithm (which we implmented prior to the distributed version). Our initial
+implementation made no optimizations in terms of memory allocation. Each time
+we performed any work on the GPU, we would allocate memory, transfer the data,
+perform the operation, transfer the data bac, and the release the allocated
+device memory. This resulted in over a million allocations on a small dataset
+and made up about 13s of compute time for the same run. After profiling our
+code using \texttt{nvprof} we realized the excessive allocations were really
+degrading performance and largely unnecessary.\\
+
+To fix this issue, we created static
+pointers to allocated memory on the device. These pointers were allocated once,
+reducing our device memory allocations from the millions down to just three
+allocations (two allocations for vectors, and a third allocation for the
+result). This was an immense savings, and reduce the compute time for the dot
+product kernel from 13s down to less than a second for the test data set
+(roughly 100 points in $\R^3$).\\
+
+For the distributed version, we added two additional static pointers for a
+matrix (which held the entire mini-batch) and a second result vector for the
+result of a matrix-vector multiplication. 
+
+\subsection{Device-Host Communication}
+This is the second issue we ran into, but did not have enough time to correct.
+Throughout our algorithm, we transfer data to and from the GPU each time we
+encounter an operation that can be efficiently computed on the GPU. This means
+there are situations where we transfer data to or from the GPU when we don't
+necessarily need to -- either the data already resides on the GPU or we don't
+actually need the result vector. Using \texttt{nvprof} we saw that
+communication was now dominating our GPU compute time, consisting of nearly
+50\% of total GPU compute time.\\
+
+However, fixing this issue is quite a bit more complicated than fixing the
+allocation issue mentioned in the previous section. There are two improvements
+that can improve the communication between host and device: memory pinning and
+warpping our data in a class that handles memory synchronization in the
+background.
+
+\paragraph{Memory Pinning} Memory pinning is declaring that the memory
+allocations on the host (that are the source for the transfer to device) will
+not be paged. This means the data stays in pinned memory so no transfer from
+paged out memory to pinned memory is necessary (or even checking if it's
+necessary). However, since we are using fairly modern hardware, the impact from
+using pinned memory is not as significant as being more efficient with when we
+transfer between host and device.
+
+\paragraph{Data Wrapper} Creating a data wrapper around the data types we used
+from Eigen would allow us to more intelligently handle transfers between host
+and device. Specifically, we would be able to determine where the data is
+currently located (device or host) and decide whether a transfer is needed or
+not. For example, if the weight vector is currently sitting on the GPU, no
+updates are made to the weights on the host, more data is transferred to the
+GPU, we could avoid both a transfer of the weight from device to host and then
+again from host to device by simply leaving the weight vector on the GPU.
+
+\subsection{CUDA Kernels}
+The last issue is the implementation of our CUDA kernels. The dot-product
+kernel was fairly straightforward, but the matrix-vector kernel leaves room for
+improvement. Overall, there are a large number of kernel optimizations that can
+be made to improve overall kernel throughput, but these optimizations can be
+very low-level. Using a library such as cuBLAS would have been a better
+approach in hind-sight. However, at the onset of the project we determined
+writing a wrapper class for our data that would allow us to interface with the
+cuBLAS kernels more easily would require more time than we had available for
+the project.\\
+
+Aside from taking advantage of cuBLAS, we can also perform more operations in
+the update phase of the distributed GPU algorithm on the GPU. Currently we
+simply perform a matrix-vector multiplication and then handle everything else on
+the host. By performing more of the update work on the GPU, we could squeeze
+even more performance out of this approach.
+
 \section{Experimental Results}
 Our results were not as promising as we anticipated. Table \ref{tab:res-scale}
 shows the results using a created data set in $\R^{100}$ that contained 10,000
@@ -521,90 +608,7 @@ efficiently handle vector dot product as the dimension of the vector
 increases. Unfortunately, as we will discuss in the following sections, there
 are other limiting factors preventing us from achieving ideal performance.
   
-\subsection{Discussion}
-As seen in the preceding table and figure, the CPU implementation outperformed
-the GPU implementations across the board. While this was not expected, the
-results are very interesting from an implementation point of view. There are a
-few key areas that hurt the GPU implementation -- unforutnately we did not have
-enough time to fix/implement these properly.
-\begin{itemize}
-    \item Memory allocation
-    \item Device-host communication
-    \item Optimized kernel implementations
-\end{itemize}
 
-\subsubsection{Memory Allocation}
-This was the first issue we ran into during our work on the sequential GPU
-algorithm (which we implmented prior to the distributed version). Our initial
-implementation made no optimizations in terms of memory allocation. Each time
-we performed any work on the GPU, we would allocate memory, transfer the data,
-perform the operation, transfer the data bac, and the release the allocated
-device memory. This resulted in over a million allocations on a small dataset
-and made up about 13s of compute time for the same run. After profiling our
-code using \texttt{nvprof} we realized the excessive allocations were really
-degrading performance and largely unnecessary.\\
-
-To fix this issue, we created static
-pointers to allocated memory on the device. These pointers were allocated once,
-reducing our device memory allocations from the millions down to just three
-allocations (two allocations for vectors, and a third allocation for the
-result). This was an immense savings, and reduce the compute time for the dot
-product kernel from 13s down to less than a second for the test data set
-(roughly 100 points in $\R^3$).\\
-
-For the distributed version, we added two additional static pointers for a
-matrix (which held the entire mini-batch) and a second result vector for the
-result of a matrix-vector multiplication. 
-
-\subsubsection{Device-Host Communication}
-This is the second issue we ran into, but did not have enough time to correct.
-Throughout our algorithm, we transfer data to and from the GPU each time we
-encounter an operation that can be efficiently computed on the GPU. This means
-there are situations where we transfer data to or from the GPU when we don't
-necessarily need to -- either the data already resides on the GPU or we don't
-actually need the result vector. Using \texttt{nvprof} we saw that
-communication was now dominating our GPU compute time, consisting of nearly
-50\% of total GPU compute time.\\
-
-However, fixing this issue is quite a bit more complicated than fixing the
-allocation issue mentioned in the previous section. There are two improvements
-that can improve the communication between host and device: memory pinning and
-warpping our data in a class that handles memory synchronization in the
-background.
-
-\paragraph{Memory Pinning} Memory pinning is declaring that the memory
-allocations on the host (that are the source for the transfer to device) will
-not be paged. This means the data stays in pinned memory so no transfer from
-paged out memory to pinned memory is necessary (or even checking if it's
-necessary). However, since we are using fairly modern hardware, the impact from
-using pinned memory is not as significant as being more efficient with when we
-transfer between host and device.
-
-\paragraph{Data Wrapper} Creating a data wrapper around the data types we used
-from Eigen would allow us to more intelligently handle transfers between host
-and device. Specifically, we would be able to determine where the data is
-currently located (device or host) and decide whether a transfer is needed or
-not. For example, if the weight vector is currently sitting on the GPU, no
-updates are made to the weights on the host, more data is transferred to the
-GPU, we could avoid both a transfer of the weight from device to host and then
-again from host to device by simply leaving the weight vector on the GPU.
-
-\subsubsection{CUDA Kernels}
-The last issue is the implementation of our CUDA kernels. The dot-product
-kernel was fairly straightforward, but the matrix-vector kernel leaves room for
-improvement. Overall, there are a large number of kernel optimizations that can
-be made to improve overall kernel throughput, but these optimizations can be
-very low-level. Using a library such as cuBLAS would have been a better
-approach in hind-sight. However, at the onset of the project we determined
-writing a wrapper class for our data that would allow us to interface with the
-cuBLAS kernels more easily would require more time than we had available for
-the project.\\
-
-Aside from taking advantage of cuBLAS, we can also perform more operations in
-the update phase of the distributed GPU algorithm on the GPU. Currently we
-simply perform a matrix-vector multiplication and then handle everything else on
-the host. By performing more of the update work on the GPU, we could squeeze
-even more performance out of this approach.
 
 \section{Lessons Learned}
 We learned a lot about what can go wrong and what considerations need to be
@@ -641,7 +645,8 @@ merrited, both from theoretical and implementation point-of-views.
 %proposed asynchronous distributed SDCA and analyze the tradeoff between
 %computation and asynchronous communication.
 %
-\section{Implementation}
+\section{Future Work}
+We plan on continuing to complete the work to get more efficient implementation of GPU programming. In this report, we didn't successfully derive the theory of an asynchronous version of distributed SDCA, and we plan on doing it in the future work. 
 
 
 %\subsubsection*{Acknowledgments}
