specify the hinge loss and lambda value

--- a/tex/report/report.tex
+++ b/tex/report/report.tex
@@ -434,8 +434,8 @@ our time constraint. However, moving forward these are great areas to explore.
 
 \section{Implementation}
 %As seen in the preceding table and figure, 
-In our experimental results,
-the CPU implementation outperformed
+In our experiments, we use $\phi(z,y)=\max(0,1-yz)$ and $\lambda=10$.
+The CPU implementation outperformed
 the GPU implementations across the board. While this was not expected, the
 results are very interesting from an implementation point of view. There are a
 few key areas that hurt the GPU implementation -- unforutnately we did not have
